Update frontend and backend files